# ghost-ros-bridge

./: CMakeLists.txt  README.md  package.xml
include/ghost-bridge/: .Ghost.h.swp  Ghost.h
launch/: ghost-bridge.launch
lib/: .Ghost.cc.swp  Ghost.cc
rules/: demo.ghost
scm/: module1.scm
src/: .ghost-bridge_node.cpp.swp  ghost-bridge_node.cpp
